# raybender

./: CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: release.yml
examples/: demo.py
lib/: geometry.cc  ray.cc  scene.cc
package/: embree.json  fetch-embree.py
raybender/: scene.py
test/: test_basic.py
