[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raybender"
version = "4.0.2"
requires-python = ">=3.9"

authors = [{name = "Mihai Dusmanu", email = "mihai.dusmanu@inf.ethz.ch"}]
description = "Embree bindings for Python"
urls = {Homepage = "https://github.com/cvg/raybender"}

dependencies = ["numpy"]

[project.readme]
file = "README.md"
content-type = "text/markdown"


[tool.cibuildwheel]
skip =  "pp* *i686 *-win32 *musllinux*"
manylinux-x86_64-image = "manylinux_2_28"
before-test = "pip install pytest"
test-command = "pytest -v {project}/test"
before-build = "python {project}/package/fetch-embree.py --install embree4"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel && python {project}\\package\\fetch-embree.py --install embree4"
repair-wheel-command = "delvewheel repair --add-path embree4\\bin --no-mangle tbb12.dll;embree4.dll -w {dest_dir} {wheel}"
environment = { embree_DIR="D:\\a\\raybender\\raybender\\embree4\\lib\\cmake\\embree-4.3.3"}

[tool.cibuildwheel.macos]
repair-wheel-command = "DYLD_LIBRARY_PATH=embree4/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
environment = { embree_DIR="/Users/runner/work/raybender/raybender/embree4/lib/cmake/embree-4.3.3" }

[tool.cibuildwheel.linux]
repair-wheel-command = "LD_LIBRARY_PATH=`realpath embree4/lib`; auditwheel repair -w {dest_dir} {wheel}"
environment = { embree_DIR="/project/embree4/lib/cmake/embree-4.3.3"}
